{
    "name": "Controls",
    "maps": [
        {
            "name": "InGameControls",
            "id": "ab36e899-937a-4404-b088-457d9ed97f6a",
            "actions": [
                {
                    "name": "Player1Move",
                    "type": "Value",
                    "id": "979591f3-d870-4a94-a859-b28a5c0e76f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player1Interact",
                    "type": "Button",
                    "id": "40dcd0e1-eb7a-4cf9-92c1-d9eb0f77cd1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player1Shoot",
                    "type": "Button",
                    "id": "b2a0185a-76f3-443b-8763-df85780de052",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player2Move",
                    "type": "Value",
                    "id": "b4a624ee-8720-4609-889d-d8f456a76d05",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player2Shoot",
                    "type": "Button",
                    "id": "eb030ce0-611d-4f1a-a9d7-6764b2d5ff87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player2Interact",
                    "type": "Button",
                    "id": "25d34275-4684-487d-952a-2612e24f3f4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7791b06c-7e76-4898-801f-5c141a370aac",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "63b51c1f-58d2-47c6-a4db-08d44db59084",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f6641569-0012-4399-93a5-a94a4607a557",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5c83c61b-d3ce-48fc-b35c-3ac60ffb8fc8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1fad0821-1bd7-4d67-918c-624e17c71b72",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "34c8fcb6-2ab1-4c7d-ade8-3d949fa4a867",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5670c771-9099-4088-9b74-289120fc5b72",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "61720434-7e7e-4df4-99e5-9842fb103ff4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d780eebf-0ecb-49b0-b8cc-fa7a003740da",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7f9c422f-5b48-4c9b-bacf-41f7da49e674",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bf5f8d4c-47af-4436-9e6a-97d3b06400bb",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c3f3613-3489-44e3-b0da-0c1a0d31a30c",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8219b8fc-1fbb-4354-b3f3-2ffb3bc2162a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83b533fc-bac6-4054-adc8-159f3275e5c7",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PersistentActions",
            "id": "fd6ddcab-c8dc-4cff-befe-ec939fe264ba",
            "actions": [
                {
                    "name": "Player2Pause",
                    "type": "Button",
                    "id": "1828af6b-5306-402b-a7f0-e08004ce4515",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1Pause",
                    "type": "Button",
                    "id": "99b5d327-2477-4656-9778-d89d6074e43f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bcddaace-8ef9-41d5-baf8-ac9b1423252a",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a29a25af-31aa-4f3a-adc3-f5447f3cecc6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}